fix: update flash messaging feature

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -73,4 +73,8 @@ a:hover {
     border-color: var(--phptrivia-secondary);
 }
 
+/* Toasts */
+.toast.bg-primary {
+    background-color: var(--phptrivia-primary) !important;
+}
 
